--- a/nhost/nhost.toml
+++ b/nhost/nhost.toml
@@ -7,7 +7,8 @@ email.confirm = false
 migrations = "migrations"
 
 [graphql]
-database = "default"  # Это ключевое поле! Без него Nhost падает
+enabled = true
+database = "default"
 
 [functions]
 enabled = true
