--- a/nhost/nhost.toml
+++ b/nhost/nhost.toml
@@ -8,7 +8,7 @@ migrations = "migrations"
 
 [graphql]
 enabled = true
-database = "default"
+schema = "public"  # Это правильное значение для Nhost/Hasura в 2026 году
 
 [functions]
 enabled = true
