--- a/nhost/nhost.toml
+++ b/nhost/nhost.toml
@@ -8,7 +8,8 @@ migrations = "migrations"
 
 [graphql]
 enabled = true
-database = "postgres"  # Это правильное значение — Nhost/Hasura использует "postgres" как дефолтную БД
+database = "postgres"  # Обязательно "postgres" — это имя дефолтной БД в Nhost/Hasura
+schema = "public"      # Схема по умолчанию
 
 [functions]
 enabled = true
